[tool.poetry]
name = "freeradius-microservice"
version = "0.1.0"
description = "A fast and lightweight Freeradius microservice"
authors = ["Christian G. Semke <chrisemke@protonmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
packages = [{include = "freeradius_microservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
